# fluid_coprocessing

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bench_bits.csv  blocked_bloom_benchmark  bloom_size.csv  bloomfilter.hpp  build.hpp  build.hpp.in  dependencies.sh  determine_configuration.cpp  format.py  generate.sh  generate_small.sh  hash_table.cpp  hash_table.hpp  heatmap.tbl  latex_table.txt  main.cpp  main.cu  new_heatmap.tbl  query.cpp  query.hpp  table.cpp  table.hpp  task_manager.cpp  task_manager.hpp  test.cpp  vectorized.cpp  vectorized.hpp
bloomfilter/: blocked_bloom_benchmark.cu
results/: bench_bits.csv  bloom_size.csv  output.txt
results/op_vs_bfsize/: results-op_vs_bfsizecpu.csv  results-op_vs_bfsizegpu.csv  results-stream_newgpu.csv  results-stream_newnot_gpu.csv  results-streamgpu.csv
scripts/: bloom_size.py  calibration.sh  common_exp.py  expensiveop_exp.py  false_positive.py  heatmap_log_to_table.sh  heatmap_parser.py  heatmap_table_to_table.py  morsel_exp.py  op_vs_bfsize_exp.py  plot.py  plot_all_timelines.sh  plot_sorting.py  plot_theory.py  plot_timeline.py  selectivity_exp.py  streams_exp.py
src/: hash_table.cpp  query.cpp  table.cpp  task_manager.cpp  test.cpp  vectorized.cpp
src/bloomfilter/: blocked_bloom_benchmark.cu  bloom_cuda.hpp  bloom_cuda_filter.cuh  bloom_cuda_filter.hpp  bloom_cuda_filter_template.hpp  bloom_size_benchmark.cu  constants.hpp  cuda_helper.hpp  util.hpp
src/bloomfilter/cuda/: blocked_bloomFilter.hpp  kernels.hpp
src/include/: bloomfilter.hpp  build.hpp  constants.hpp  hash_table.hpp  inflight_probe.hpp  pipeline.hpp  profile_printer.hpp  profiling.hpp  query.hpp  rwticket.hpp  table.hpp  task_manager.hpp  timeline.hpp  vectorized.hpp
